Se creo y maqueto nav

--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>AhorrADAs</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="flex justify-between pt-5 bg-green-300">
+            <div class=" flex flex-row gap-2.5 m-2">
+                <img src="imagenes/wallet_25330.ico" alt="billetera con dinero" class="h-10 w-10 object-contain">
+                <h1 class=" flex items-center text-3xl font-mono p	">AhorrADAs</h1>
+            </div>
+            <ul class="flex flex-row  mr-2">
+                <li class="flex items-center">
+                    <img src="imagenes/artboard_123065.ico" alt="una l con una flecha hacia arriba" class="h-6 w-6 object-contain">
+                    <a href="#" class="p-2" >Balance</a>
+                </li>
+                <li class="flex items-center">
+                    <img src="imagenes/tag-icon_34341.ico" alt="una etiqueta de ropa" class="h-6 w-6 object-contain"  >
+                    <a href="#" class="p-2" >Categoria</a>
+                </li>
+                <li class="flex items-center">
+                    <img src="imagenes/5_icon-icons.com_68890.ico" alt="un circulo partiodo en varias porciones con diferente color cada porcion" class="h-6 w-6 object-contain">
+                    <a href="#" class="p-2">Reporte</a>
+                </li>
+            </ul>
+                
+        </nav>
+    </header>
+    <main></main>
 </body>
 </html>
